[landing page] fix container on mobile

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -78,6 +78,11 @@ p, .call-to-action {
     .donate-page .flex-item {
         margin-bottom: 100px;
     }
+
+    .landing-page .container {
+        width: 100%;
+        max-width: 100%;
+    }
 }
 
 
